--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -50,7 +50,7 @@ footer span {
   opacity: 0.7;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and ((max-width: 768px) or (any-pointer: coarse)) {
   footer {
     justify-content: center;
   }
