--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -126,3 +126,9 @@
     width: 100%;
   }
 }
+
+@media screen and (orientation: landscape) and (any-pointer: coarse) {
+  .arrow-btn {
+    display: none;
+  }
+}
